--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,8 +22,19 @@
   -->
 
 <resources>
+    <bool name="is_night">false</bool>
+    <bool name="status_bar_light">true</bool>
+
     <color name="colorPrimary">#0082C9</color>
+    <color name="colorPrimaryDark">#006AA3</color>
+    <color name="colorAccent">#007CC2</color>
     <color name="textColorOnPrimaryBackground">#ffffff</color> <!-- white/black depending on primary color -->
+
+    <!-- App bar -->
+    <color name="appbar">@android:color/white</color>
+    <color name="fontAppbar">#666666</color>
+    <color name="fontSecondaryAppbar">#A5A5A5</color>
+    <color name="actionbar_shadow">#222222</color>
 
     <!-- Text color of sent messages -->
     <color name="nc_outcoming_text_default">#FFFFFF</color>
@@ -48,10 +59,14 @@
     <!-- Emoji list in chat window -->
     <color name="emoji_icons">#61000000</color>
 
+    <color name="fg_default">#666666</color>
     <color name="fg_inverse">#FFFFFF</color>
+    <color name="fg_contrast">#656565</color>
+    <color name="fg_chat_message_sent">@color/fg_default</color>
 
     <color name="bg_default">#FFFFFF</color>
     <color name="bg_alt">@color/white60</color>
+    <color name="bg_inverse">@color/grey950</color>
     <color name="bg_dark_mention_chips">#333333</color>
 
     <color name="bg_message_list_incoming_bubble">#EFEFEF</color>
