--- a/app/src/main/res/layout/call_item.xml
+++ b/app/src/main/res/layout/call_item.xml
@@ -2,7 +2,9 @@
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
+  ~ @author Marcel Hibbe
   ~ @author Andy Scherzinger
+  ~ Copyright (C) 2021 Marcel Hibbe <dev@mhibbe.de>
   ~ Copyright (C) 2021 Andy Scherzinger <info@andy-scherzinger.de>
   ~ Copyright (C) 2017 Mario Danic <mario@lovelyhq.com>
   ~
@@ -25,43 +27,8 @@
     android:id="@+id/relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/peer_nick_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:textColor="@android:color/white"
-        android:layout_centerHorizontal="true"/>
-
-    <ImageView
-        android:id="@+id/remote_audio_off"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_below="@id/peer_nick_text_view"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:contentDescription="@string/nc_remote_audio_off"
-        android:src="@drawable/ic_mic_off_white_24px"
-        android:visibility="invisible" />
-
-    <ImageView
-        android:id="@+id/remote_video_off"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_below="@id/peer_nick_text_view"
-        android:layout_marginStart="8dp"
-        android:layout_toEndOf="@id/remote_audio_off"
-        android:contentDescription="@string/nc_remote_video_off"
-        android:src="@drawable/ic_videocam_off_white_24px"
-        android:visibility="invisible" />
+    android:orientation="vertical"
+    android:gravity="center">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/avatarImageView"
@@ -74,6 +41,27 @@
         android:id="@+id/surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/peer_nick_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="6dp"
+        android:layout_marginStart="10dp"
+        android:textColor="@android:color/white" />
+
+    <ImageView
+        android:id="@+id/remote_audio_off"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginStart="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@id/peer_nick_text_view"
+        android:src="@drawable/ic_mic_off_white_24px"
+        android:contentDescription="@string/nc_remote_audio_off"
         android:visibility="invisible" />
 
 </RelativeLayout>
