--- a/app/src/main/res/layout/controller_call_notification.xml
+++ b/app/src/main/res/layout/controller_call_notification.xml
@@ -101,7 +101,8 @@
             android:ellipsize="marquee"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="28sp"
+            android:textSize="22sp"
+            android:textStyle="bold"
             tools:text="Victor Gregorius Magnus" />
 
         <TextView
