respect light/dark theming
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/user_info_details_table_item.xml
+++ b/app/src/main/res/layout/user_info_details_table_item.xml
@@ -29,7 +29,7 @@
         android:id="@+id/icon"
         android:layout_width="@dimen/iconized_single_line_item_icon_size"
         android:layout_height="@dimen/iconized_single_line_item_icon_size"
-        android:layout_marginStart="@dimen/user_info_icon_horizontal_margin"
+        android:layout_marginStart="@dimen/standard_margin"
         android:contentDescription="@string/account_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,13 +40,12 @@
         android:id="@+id/user_info_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/user_info_icon_horizontal_margin"
+        android:layout_marginStart="@dimen/standard_margin"
         android:layout_marginEnd="@dimen/standard_margin"
         android:autofillHints="none"
         android:ellipsize="end"
         android:inputType="text"
         android:maxLines="1"
-        android:textAppearance="?android:attr/textAppearanceListItem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/scope"
         app:layout_constraintStart_toEndOf="@id/icon"
@@ -58,8 +57,7 @@
         android:id="@+id/scope"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="@dimen/user_info_icon_horizontal_margin"
-        android:layout_marginEnd="@dimen/standard_double_margin"
+        android:layout_marginEnd="@dimen/standard_margin"
         android:contentDescription="@string/scope_toggle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
