--- a/app/src/main/res/layout/user_info_details_table_item_shimmer.xml
+++ b/app/src/main/res/layout/user_info_details_table_item_shimmer.xml
@@ -27,14 +27,14 @@
         android:layout_width="@dimen/iconized_single_line_item_icon_size"
         android:layout_height="@dimen/iconized_single_line_item_icon_size"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/user_info_icon_horizontal_margin"
+        android:layout_marginStart="@dimen/standard_margin"
         app:corners="100" />
 
     <com.elyeproj.loaderviewlibrary.LoaderTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/user_info_icon_horizontal_margin"
+        android:layout_marginStart="@dimen/standard_margin"
         android:layout_marginEnd="@dimen/standard_margin" />
 
 </LinearLayout>
