--- a/app/src/main/res/layout/user_info_details_table_item.xml
+++ b/app/src/main/res/layout/user_info_details_table_item.xml
@@ -46,6 +46,7 @@
         android:ellipsize="end"
         android:inputType="text"
         android:maxLines="1"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/scope"
         app:layout_constraintStart_toEndOf="@id/icon"
