--- a/app/src/main/res/layout/user_info_details_table_item.xml
+++ b/app/src/main/res/layout/user_info_details_table_item.xml
@@ -46,7 +46,7 @@
         android:ellipsize="end"
         android:inputType="text"
         android:maxLines="1"
-        android:textSize="16sp"
+        android:textSize="@dimen/two_line_primary_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/scope"
         app:layout_constraintStart_toEndOf="@id/icon"
@@ -56,8 +56,8 @@
 
     <ImageView
         android:id="@+id/scope"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="@dimen/iconized_single_line_item_icon_size"
+        android:layout_height="@dimen/iconized_single_line_item_icon_size"
         android:layout_marginEnd="@dimen/standard_margin"
         android:contentDescription="@string/scope_toggle"
         app:layout_constraintBottom_toBottomOf="parent"
