--- a/app/src/main/res/layout/controller_profile.xml
+++ b/app/src/main/res/layout/controller_profile.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?><!--  Nextcloud Android client application
 
-  Copyright (C) 2017 Andy Scherzinger
+  Copyright (C) 2017-2021 Andy Scherzinger
   Copyright (C) 2017 Nextcloud
 
   This program is free software; you can redistribute it and/or
@@ -59,6 +59,7 @@
             android:layout_margin="4dp"
             android:ellipsize="end"
             android:lines="2"
+            android:textColor="@color/medium_emphasis_text"
             tools:text="john@nextcloud.com" />
 
         <LinearLayout
