--- a/app/src/main/res/layout/controller_settings.xml
+++ b/app/src/main/res/layout/controller_settings.xml
@@ -70,7 +70,8 @@
                 android:layout_below="@id/display_name_text"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="4dp"
-                tools:text="jane@nextcloud.com"/>
+                android:textColor="@color/medium_emphasis_text"
+                tools:text="jane@nextcloud.com" />
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/avatar_image"
