--- a/app/src/main/res/xml/chip_others.xml
+++ b/app/src/main/res/xml/chip_others.xml
@@ -22,5 +22,5 @@
 <chip xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:textAppearance="@style/ChipIncomingTextAppearance"
-    app:chipBackgroundColor="@color/white"
+    app:chipBackgroundColor="#deffffff"
     app:closeIconEnabled="false" />
