--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,4 +124,11 @@
     <style name="HintTextLogin" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <!-- Launch screen -->
+    <style name="AppTheme.Launcher">
+        <item name="android:windowBackground">@drawable/launch_screen</item>
+        <item name="android:statusBarColor">@color/colorPrimary</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
+    </style>
 </resources>
